--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -4,8 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="#666666"/>
-
+        android:color="#F1F6FB"/>
     <size
         android:width="5dp"
         android:height="5dp"/>
