--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -17,31 +17,187 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/PopupOverlay" />
-
     </com.google.android.material.appbar.AppBarLayout>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addNode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:src="@drawable/ic_add_white_24dp" />
 
     <com.otaliastudios.zoom.ZoomLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical|horizontal"
         app:hasClickableChildren="true">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="50dp"
-            android:layout_marginTop="?attr/actionBarSize" />
+            android:layout_marginTop="?attr/actionBarSize"
+            android:padding="50dp" />
+
     </com.otaliastudios.zoom.ZoomLayout>
 
+    <RelativeLayout
+        android:id="@+id/buttonsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_dodgeInsetEdges="bottom"
+        android:layout_gravity="bottom">
+
+        <!--Your Buttons here-->
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/filterView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom|start"
+            android:layout_marginStart="@dimen/fab_margin"
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:outlineSpotShadowColor="#00000000"
+            android:src="@drawable/selection_filter"
+            app:backgroundTint="#1F2133"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:tint="#F1F6FB"
+            tools:visibility="visible" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addNode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:layout_marginRight="@dimen/fab_margin"
+            android:outlineSpotShadowColor="#00000000"
+            android:src="@drawable/child_settings"
+            android:visibility="gone"
+            app:backgroundTint="#1F2133"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="#F1F6FB"
+            tools:visibility="visible" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/deleteNode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/addNode"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="@dimen/fab_margin"
+            android:layout_marginEnd="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/btn_margins"
+            android:outlineSpotShadowColor="#00000000"
+            android:src="@drawable/delete_icon"
+            app:backgroundTint="#1F2133"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="#F1F6FB"
+            tools:visibility="visible" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/createNode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/deleteNode"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/btn_margins"
+            android:outlineSpotShadowColor="#00000000"
+            android:src="@drawable/edit_icon"
+            app:backgroundTint="#1F2133"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="#F1F6FB"
+            tools:visibility="visible" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/editNode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/createNode"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/btn_margins"
+            android:outlineSpotShadowColor="#00000000"
+            android:src="@drawable/ic_add_white_24dp"
+            app:backgroundTint="#1F2133"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="#F1F6FB"
+            tools:visibility="visible" />
+
+        <Button
+            android:id="@+id/lay1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/filterView"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/btn_margins"
+            android:fontFamily="@font/inter"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:outlineSpotShadowColor="#00000000"
+            android:text="Button"
+            android:textAllCaps="false"
+            app:backgroundTint="#1F2133"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="#F1F6FB" />
+
+        <Button
+            android:id="@+id/lay2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/lay1"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/btn_margins"
+            android:fontFamily="@font/inter"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:outlineSpotShadowColor="#00000000"
+            android:text="Button"
+            android:textAllCaps="false"
+            app:backgroundTint="#1F2133"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="#F1F6FB" />
+
+        <Button
+            android:id="@+id/lay3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/lay2"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/btn_margins"
+            android:fontFamily="@font/inter"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:outlineSpotShadowColor="#00000000"
+            android:text="Button"
+            android:textAllCaps="false"
+            app:backgroundTint="#1F2133"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="#F1F6FB" />
+
+        <Button
+            android:id="@+id/lay4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/lay3"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/btn_margins"
+            android:fontFamily="@font/inter"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:outlineSpotShadowColor="#00000000"
+            android:text="Button"
+            android:textAllCaps="false"
+            app:backgroundTint="#1F2133"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="#F1F6FB" />
+    </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
