--- a/app/src/main/res/layout/node.xml
+++ b/app/src/main/res/layout/node.xml
@@ -4,14 +4,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:background="@android:color/holo_blue_dark"
+    android:background="#1F2133"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
+        android:textColor="#F1F6FB"
+        android:fontFamily="@font/inter"
         tools:text="Node text here" />
 </LinearLayout>
