--- a/app/src/main/res/layout/node.xml
+++ b/app/src/main/res/layout/node.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
-    android:background="#1F2133"
+    android:background="@drawable/circular_box"
     android:padding="10dp">
 
     <TextView
